# fiber-recognition-project

./: CMakeLists.txt  README.md  Readme.docx
config/: default.yaml
data/光纤图片/左圆逆时针旋转 右圆清晰/: list.txt  show_list.bat
doc/: task.docx  光纤项目开发计划--张海斌.xlsx  关于光纤自动对中和摄像头自动对焦的解决方案.docx  函数说明.md  报告总结.docx  项目各个模块功能说明.md
include/: common_include.h  config.h  control.h  frame.h  scene.h  video.h
src/: config.cpp  control.cpp  frame.cpp  scene.cpp  video.cpp
test_example/: class_test.cpp  core_test.cpp
utils/: getRefferencePoint.py  plot_sharpness_value.py
